fix: 统一异步任务编号权限与幂等校验